Diapositiva para la tabla de contenidos.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Módulo 3: Imágenes</title>
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/sky.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/monokai.css">
@@ -25,8 +25,24 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h2>Curso de Introducción a Docker</h2>
+            <p><img src="images/horizontal-logo-monochromatic-white.png" height="75" class="plain" /></p>
+					<h4>Alfonso Alba García</h4>
+					<p>
+						<small>📩alfonso@alfonsoalba.com</small>
+						<br/>
+						<small><a href="https://www.twitter.com/aalbagarcia" target="_blank">@aalbagarcia</a></small>
+						<br/>
+						<small><a href="https://es.linkedin.com/in/alfonsoalbagarcia" target="_blank">LinkedIn</a></small>
+					</p>                                        
+				</section>
+
+				<section data-markdown="slides/toc.md"
+					 data-separator="^------"
+					 data-separator-vertical="^\^\^\^\^\^\^"
+					 data-charset="utf8">
+				</section>
 			</div>
 		</div>
 
