Añade diapositivas de la sección "¿Qué es una imagen?"

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
 					 data-separator-vertical="^\^\^\^\^\^\^"
 					 data-charset="utf8">
 				</section>
+
+				<section id="what-is-an-image" 
+								 data-markdown="slides/what-is-an-image.md"
+						 		 data-separator="^------"
+						 		 data-separator-vertical="^\^\^\^\^\^\^"
+						 		 data-charset="utf8">
+				</section>
 			</div>
 		</div>
 
