Añade diapositivas de la sección "Listar y borrar imágenes"

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 						 		 data-separator-vertical="^\^\^\^\^\^\^"
 						 		 data-charset="utf8">
 				</section>
+				<section data-markdown="slides/list-and-remove-images.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
+				</section>				
 			</div>
 		</div>
 
