Añade diapositivas de la sección "Buscar imáges"

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 								 data-separator="^------"
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
+				</section>	
+
+				<section data-markdown="slides/search-images.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
 				</section>				
 			</div>
 		</div>
