Añade diapositivas de la sección "Descargar imágenes"

--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
 				</section>				
+
+				<section data-markdown="slides/download-images.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
+				</section>				
+
 			</div>
 		</div>
 
