Añade diapositivas de la sección "Consolidar (commit) cambios"

--- a/index.html
+++ b/index.html
@@ -71,24 +71,33 @@
 						 		 data-separator-vertical="^\^\^\^\^\^\^"
 						 		 data-charset="utf8">
 				</section>
-				<section data-markdown="slides/list-and-remove-images.md"
+				<section id="list-and-remove-images" 
+								 data-markdown="slides/list-and-remove-images.md"
 								 data-separator="^------"
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
 				</section>	
 
-				<section data-markdown="slides/search-images.md"
+				<section id="search-images" 
+								 data-markdown="slides/search-images.md"
 								 data-separator="^------"
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
 				</section>				
 
-				<section data-markdown="slides/download-images.md"
+				<section id="download-images" 
+								 data-markdown="slides/download-images.md"
 								 data-separator="^------"
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
 				</section>				
 
+				<section id="commit-changes" 
+								 data-markdown="slides/commit-changes.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
+				</section>
 			</div>
 		</div>
 
