Añade diapositivas de la sección "Subir imágenes"

--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
 				</section>
+				
+				<section id="upload-images" 
+								 data-markdown="slides/upload-images.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
+				</section>				
 			</div>
 		</div>
 
