Añade diapositivas de la sección "Importar y exportar imágenes"

--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
 								 data-separator="^------"
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
-				</section>				
+				</section>		
+				
+				<section id="export-import-images" 
+								 data-markdown="slides/export-import-images.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
+				</section>
 			</div>
 		</div>
 
