Añade diapositivas de la sección "Guardar y cargar Imágenes"

--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
 				</section>
+
+				<section id="save-load-images" 
+								 data-markdown="slides/save-load-images.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
+				</section>				
 			</div>
 		</div>
 
