Añade diapositivas de la sección "Ejercicio"

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
 								 data-separator="^------"
 								 data-separator-vertical="^\^\^\^\^\^\^"
 								 data-charset="utf8">
+				</section>	
+				
+				<section id="exercise" 
+								 data-markdown="slides/exercise.md"
+								 data-separator="^------"
+								 data-separator-vertical="^\^\^\^\^\^\^"
+								 data-charset="utf8">
 				</section>				
 			</div>
 		</div>
